--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,1 +1,38 @@
-name: run main.py
+name: Run TenderScanner.py
+
+on:
+  schedule:
+    - cron: '0 8 * * *'  # Runs daily at 8 AM UTC
+
+jobs:
+  build:
+    runs-on: macos-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9.6'
+
+    - name: Cache Python packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-python-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-python-
+
+    - name: Install Python packages
+      run: |
+        python -m pip install --upgrade pip
+        pip install selenium requests opencv-python pytesseract urllib3 webdriver-manager
+
+    - name: Install Tesseract OCR
+      run: brew install tesseract
+
+    - name: Run TenderScanner
+      run: |
+        python TenderScanner.py
