--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,10 +30,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-python-
 
-    - name: Install Python packages
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install selenium requests opencv-python pytesseract urllib3 webdriver-manager
+        pip install -r requirements.txt
 
     - name: Install Tesseract OCR
       run: brew install tesseract
