--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Set file permissions
+      run: chmod 666 PelitaCounter.txt
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
