--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -49,4 +49,14 @@ jobs:
 
     - name: Run TenderScanner
       run: python TenderScanner.py
+
+    - name: Commit and push updated PelitaCounter.txt
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git add PelitaCounter.txt
+        git commit -m "Update PelitaCounter.txt"
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
