--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-selenium
-requests
-opencv-python
-pytesseract
-urllib3
-webdriver-manager
+selenium==4.24.0
+requests==2.32.3
+opencv-python==4.10.0.84
+pytesseract==0.3.13
+urllib3==2.2.2
+webdriver-manager==4.0.2
