--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,9 +54,13 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add PelitaCounter.txt
-        git commit -m "Update PelitaCounter.txt"
-        git push
+        if git diff --exit-code PelitaCounter.txt > /dev/null; then
+          echo "No changes in PelitaCounter.txt, skipping commit."
+        else
+          git add PelitaCounter.txt
+          git commit -m "Update PelitaCounter.txt"
+          git push
+        fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
